--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "lint": "./node_modules/.bin/eslint . --ext .js"
   },
   "devDependencies": {
-    "eslint": "^8.57.1",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^10.1.8",
+    "eslint": "^4.1.1",
+    "eslint-config-airbnb-base": "^11.3.2",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.32.0",
     "prettier": "^3.8.1"
   },
   "dependencies": {
     "@hapi/hapi": "^21.4.4",
+    "@hapi/inert": "^7.1.0",
     "@hapi/vision": "^7.0.3",
-    "handlebars": "^4.7.8"
+    "handlebars": "^4.7.8",
+    "uuid": "^13.0.0"
   }
 }
